--- a/css/style.css
+++ b/css/style.css
@@ -113,44 +113,89 @@ ul{
 }
 
 
+.navTopBorder{
+    border-style: hidden hidden solid solid;
+    border-width: 3px;
+    border-color: var(--whiteColor);
+}
+
+
 
 /* --- --- --- CARLO --- --- --- */
 
-.coversGrayBlack{
-    /*background-color: var(--grayColor);*/
-    border-style: hidden solid hidden solid;
+.coversLiA a{
+    text-decoration: none;
+    color: var(--mainColor);
+}
+
+.coversLiA{
     border-color: var(--whiteColor);
     border-width: 3px;
 }
 
-.bck-black {
-    background-color: var(--blackColor);
-}
-
-.bck-grey {
+.covereGray{
     background-color: var(--grayColor);
+    border-style: hidden solid hidden solid;
+
+}
+
+.covereBlack{
+    background-color: var(--blackColor);
+    border-style: hidden solid solid solid;
+}
+
+.covereBlackBorder{
+    background-color: var(--blackColor);
+    border-style: none;
 }
 
 
 
+.minMusikkLiA a{
+    text-decoration: none;
+    color: var(--mainColor);
+}
 
-
-.minMusikkGrayBlack{
+.minMusikkLiA{
     border-style: hidden solid solid hidden;
     border-color: var(--whiteColor);
     border-width: 3px;
 }
 
+.minMusikkGray{
+    background-color: var(--grayColor);
+    border-style: hidden solid hidden hidden;
+}
+
+.minMusikkBlack{
+    background-color: var(--blackColor);
+}
+
+.minMusikkBlackBorder{
+    background-color: var(--blackColor);
+    border-style: hidden solid;
+}
+
+
+
+
 
 /* --- HEADER BUTTON --- */
-.profileButton{
+
+.profileButton a{
     font-family: 'Abel', sans-serif;
     font-size: 1.7rem;
+    text-decoration: none;
+
     padding: 0.5rem 1.5rem;
     color: var(--mainColor);
     background-color: var(--blackColor);
-    
-    border-style: hidden solid hidden solid;
+
+
+}
+
+.profileButton{
+    border-style: hidden solid;
     border-width: 3px;
     border-color: var(--whiteColor);
 }
@@ -181,21 +226,28 @@ ul{
    
 }
 
-.balanceLi{
+.firstSongLi{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 
     align-items: center;
     color: var(--mainColor);
-    
 }
+
+
 
 .triangelIcon{
     height: 1rem;
     align-items: center;
     padding-left: 9rem;
 
+}
+
+.triangelIconTwo{
+    height: 1rem;
+    align-items: center;
+    padding-left: 10rem;
 }
 
 
@@ -273,8 +325,6 @@ main{
     flex-direction: row;
     gap: 7rem;
     padding: 7rem;
-
-    
 }
 
 
@@ -286,7 +336,7 @@ main{
     padding: 1rem 2rem;
     font-size: 1.5rem;
 
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(20px);
 
     min-width: 200px;
 }
@@ -353,6 +403,8 @@ footer ul li :hover{
     margin: 5rem 0rem 15rem 0rem;
     border-radius: 1rem;
     border-style: solid;
+
+    backdrop-filter: blur(20px);
 }
 
 .h2Profil{
@@ -395,9 +447,6 @@ form input{
     padding: 0.4rem 1rem;
 
 }
-
-
-
 
 
 
@@ -457,6 +506,8 @@ form input{
         flex-direction: column;
         align-items: center;
     }
+
+
 }
 
 
@@ -501,9 +552,9 @@ form input{
         flex-direction: column;
     }
 
-    .profileButton{
-        border-style: hidden solid solid solid;
-        border-width: 3px;
+    .profileButton a{
+        border-style: solid hidden;
+        border-width: 0px;
         border-color: var(--whiteColor);
         font-size: 1.5rem;
     }
@@ -544,7 +595,6 @@ form input{
     .h2Profil{
         margin-bottom: 2rem;
         font-size: 2rem;
-    
     }
 
 
