--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
 
-
 /* --- FONTS --- */
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
-
-
-/* --- FONT LOGO --- */
 @import url('https://fonts.googleapis.com/css2?family=Nova+Round&display=swap');
+
 
 /* --- COLORS --- */
 :root{
@@ -17,10 +14,7 @@
 
 
 
-
-
-/* --- --- --- --- --- INDEX PAGE --- --- --- --- --- */
-
+/* --- --- --- --- --- COVERS AND MIN MUSIKK PAGES --- --- --- --- --- */
 
 
 
@@ -65,7 +59,6 @@ h4{
 }
 
 
-
 /* --- ALL UNORDERED LISTS --- */
 ul{
     list-style: none;
@@ -89,15 +82,12 @@ ul{
 }
 
 
-
 /* --- HEADER NAV --- */
-
 .navTop{
     font-family: 'Abel', sans-serif;
     font-size: 1.7rem;
     color: var(--mainColor);
     background-color: var(--blackColor);
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -112,7 +102,6 @@ ul{
     padding: 0.5rem 1.5rem;
 }
 
-
 .navTopBorder{
     border-style: hidden hidden solid solid;
     border-width: 3px;
@@ -121,7 +110,7 @@ ul{
 
 
 
-/* --- --- --- CARLO --- --- --- */
+/* --- --- --- Section --- --- --- */
 
 .coversLiA a{
     text-decoration: none;
@@ -148,7 +137,6 @@ ul{
     background-color: var(--blackColor);
     border-style: none;
 }
-
 
 
 .minMusikkLiA a{
@@ -186,12 +174,9 @@ ul{
     font-family: 'Abel', sans-serif;
     font-size: 1.7rem;
     text-decoration: none;
-
     padding: 0.5rem 1.5rem;
     color: var(--mainColor);
     background-color: var(--blackColor);
-
-
 }
 
 .profileButton{
@@ -201,47 +186,36 @@ ul{
 }
 
 
-
 /* --- NAV SONGS --- */
 .navSongs{
     font-family: 'Abel', sans-serif;
     font-size: 1.5rem;
-
     padding: 2.5rem 1.9rem 40rem 1.5rem ;
     color: var(--whiteColor);
     background: linear-gradient(#3B3B3B  10% , #0b0b0b 80%);
-
     border-style: hidden solid;
     border-width: 3px;
     border-color: var(--whiteColor);
-
-
 }
 
 .navSongs ul{
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
-
-   
+    gap: 1.5rem;  
 }
 
 .firstSongLi{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
     align-items: center;
     color: var(--mainColor);
 }
-
-
 
 .triangelIcon{
     height: 1rem;
     align-items: center;
     padding-left: 9rem;
-
 }
 
 .triangelIconTwo{
@@ -255,15 +229,10 @@ ul{
 
 main{
     background-image: url(../assets/backgroundGuitar.png);
-
     border-style: hidden solid hidden hidden;
     border-width: 3px;
     border-color: var(--whiteColor);
 }
-
-
-
-
 
 
 /* --- BIG FLEX BOXES --- */
@@ -281,7 +250,6 @@ main{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
     border-style: solid hidden hidden hidden;
     border-width: 3px;
     border-color: var(--whiteColor);
@@ -289,15 +257,11 @@ main{
 }
 
 
-
-
 /* --- FORSKJELLIGE TING - SJEKK SENERE --- */
-
 
 .songTitles{
     padding: 2rem;
 }
-
 
 .songInfo{
     font-family: 'Nova Round', cursive;
@@ -305,12 +269,9 @@ main{
     flex-flow: row wrap;
     width: 24.2rem;
     font-size: 1.3rem;
-
     margin: 2rem 2rem 2rem 0rem;
     border-style: solid;
-
     border-radius: 0.8rem;
-
     backdrop-filter: blur(10px);
 }
 
@@ -327,7 +288,6 @@ main{
     padding: 7rem;
 }
 
-
 .buttonsFlex button{
     background-color: transparent;
     color: var(--mainColor);
@@ -335,12 +295,9 @@ main{
     border-radius: 0.8rem;
     padding: 1rem 2rem;
     font-size: 1.5rem;
-
     backdrop-filter: blur(20px);
-
     min-width: 200px;
 }
-
 
 footer{
     font-family: 'Abel', sans-serif;
@@ -348,12 +305,10 @@ footer{
     flex-direction: column;
     align-items: center;
     background-color: var(--blackColor);
-
     border-style: solid;
     border-color: var(--whiteColor);
     border-width: 3px;
 }
-
 
 footer ul{
     display: flex;
@@ -361,24 +316,17 @@ footer ul{
     gap: 2rem;
     font-size: 1.2rem;
     padding-bottom: 4rem;
-
 }
-
 
 footer ul li a{
     text-decoration: none;
     color: var(--whiteColor);
 }
 
-
 footer ul li :hover{
     color: var(--mainColor);
     transition: 0.7s;
 }
-
-
-
-
 
 
 
@@ -395,29 +343,23 @@ footer ul li :hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-
-
     width: 40rem;
     height: 35rem;
     padding: 5rem 0rem;
     margin: 5rem 0rem 15rem 0rem;
     border-radius: 1rem;
     border-style: solid;
-
     backdrop-filter: blur(20px);
 }
 
 .h2Profil{
     margin-bottom: 3rem;
     font-size: 3rem;
-
 }
-
 
 form{
     font-family: 'Abel', sans-serif;
     font-size: 1.5rem;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -428,30 +370,18 @@ form input{
     height: 1.5rem;
     width: 14rem;
     border-radius: 0.2rem;
-
 }
-
-
-
 
 .opprattButton{
     margin-top: 2rem;
     background-color: var(--mainColor);
     letter-spacing: 0.1rem;
-
     font-family: 'Abel', sans-serif;
     font-size: 1.3rem;
-
     border-color: var(--whiteColor);
     border-radius: 0.5rem;
     padding: 0.4rem 1rem;
-
 }
-
-
-
-
-
 
 
 
@@ -506,11 +436,7 @@ form input{
         flex-direction: column;
         align-items: center;
     }
-
-
 }
-
-
 
 
 
@@ -527,7 +453,6 @@ form input{
     .guitarIcon{
         width: 2.5rem;
         height: 2.5rem;
-
         margin: 1.8rem 0rem;
     }
 
@@ -583,20 +508,13 @@ form input{
     footer ul{
         display: flex;
         flex-direction: column;
-
         gap: 1rem;
-
-    
     }
-
-
-    /* SIDE 3 - PROFIL*/
 
     .h2Profil{
         margin-bottom: 2rem;
         font-size: 2rem;
     }
-
 
     .opprettProfilDiv{
         width: 30rem;
